# AndroidProxy

./: Fugue-v1.04-all-release_104_jiagu_sign.apk  build.gradle  config.json  fugue.apk  fugue.json  settings.gradle  version.json  使用说明.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: configEormatExplain.html  explain.html  htmlTestJs.html  memo.txt  text.a.txt  text.xml
app/src/main/assets/backups/: ChongQing_YiDong_TianDao.xml  DianXingTv189_2.xml  LianTong10155.xml  LianTong10155_2.xml  YiDongShengX.xml  YiDongZhangShangShiPing.xml  YiDongZhogJiQianZhui.xml
app/src/main/assets/config/: ChongQing_LianTong_1.xml  ChongQing_YiDong_1.xml  ChongQing_YiDong_1_S.xml  ChongQing_YiDong_2.xml  DianXingTv189_1.xml  LT_SCCQ_1.g.txt  LianTong10155.xml  LianTongZhangTing.xml  SiChuan_YiDong_1.xml  YD_CQ_TianDao_Gai.g.txt  YD_CaiXing.g.txt  YiDongCaiXing.xml  YiDongCaiXingShiPing.xml
app/src/main/assets/configTemp/: DianXing_Fu_Jian.xml  YiDongShangXi.xml
app/src/main/assets/other/: 山西移动1.20.conf  福建电信1.20.conf
app/src/main/cpp/: demo.cpp  demo.h  h.cpp  hello.cpp  native-lib.cpp  test.c
app/src/main/cpp/other/: demo.cpp  native-lib.cpp  proxy.c
app/src/main/res/: res.rar
app/src/main/res/anim/: menu_bottombar_in.xml
app/src/main/res/drawable/: capture_package_view_background.xml  edit_config_textcursor.xml  orange.xml  (+9 more)
app/src/main/res/drawable-v21/: capture_package_view_bn_selector_ripple_.xml  dialog_config_select_list_item_ripple.xml  grash_data_bn_selector.xml
watchdog_localserversocket/: CMakeLists.txt  build.gradle  proguard-rules.pro
watchdog_localserversocket/src/main/cpp/: watchdog.cpp
(+259 files in other folders)
